--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "faker": "^4.1.0",
-    "kafka-node": "^3.0.1",
+    "kafkajs": "^1.8.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mustache": "^3.0.0",
@@ -21,7 +21,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "nodemon": "^1.18.10",
+    "nodemon": "^1.19.1",
     "rimraf": "^2.6.3"
   }
 }
