--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mustache": "^3.0.0",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
