--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "faker": "^4.1.0",
     "kafkajs": "^1.9.3",
     "kafkajs-avro": "^1.0.4",
