--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.4",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/preset-env": "^7.5.4",
     "nodemon": "^1.19.1",
     "rimraf": "^2.6.3"
   }
