--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-producer",
-  "version": "4.3.0",
+  "version": "4.4.0",
   "description": "Fake data producer for kafka, console and http endpoint",
   "author": "Can Elmas <canelm@gmail.com>",
   "main": "app.js",
@@ -20,6 +20,7 @@
     "moment": "^2.22.2",
     "mustache": "^3.0.0",
     "redis": "^2.8.0",
+    "unescape-js": "^1.1.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
